# ratatouille

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REUSE.toml  _.md  frogfish-ratatouille-0.1.3.tgz  frogfish-ratatouille-0.1.4.tgz  package-lock.json  package.json  tsconfig.json  tsup.config.ts
c/: Makefile
c/examples/: basic.c  contract_runner.c  http_relay.c  http_sink.c  tcp_relay.c  tcp_sink.c
c/include/: ratatouille.h
c/src/: filter.c  format.c  http_relay.c  http_sink.c  internal.h  ratatouille.c  tcp_relay.c  tcp_sink.c
contract/: cases.tsv  run-all.mjs  run-node.mjs
rust/: Cargo.toml
rust/examples/: basic.rs  contract_runner.rs  http_relay.rs  tcp_relay.rs  tcp_sink.rs
rust/src/: lib.rs
src/: experiment.ts  index.browser.ts  index.node.require.cts  index.node.ts  index.ts  relay.require.cts  relay.ts  relay.worker.ts  topic.ts
src/presets/: lambda.require.cts  lambda.ts  nomad.require.cts  nomad.ts  workers.ts
src/transports/: ringtail.require.cts  ringtail.shared.ts  ringtail.ts  ringtail.worker.ts
