# SPDX-FileCopyrightText: 2026 Alexander R. Croft
# SPDX-License-Identifier: MIT

[package]
name = "ratatouille"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Best-effort telemetry firehose logger with bounded topic state"

[lib]
name = "ratatouille"
path = "src/lib.rs"

[dependencies]
